--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,49 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400|Ubuntu:500,700&display=swap');
 
-/*
-font-family: 'Ubuntu', sans-serif;
-font-family: 'Open Sans', sans-serif;
-*/
 
 body {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-/*	background-image: url('../images/mira3000.jpg');
-	background-size: cover;
-	background-repeat:no-repeat;
-	color: #fff;*/
+	font-size: 16px;
 	color: #2a2a2a;
-	background-image: url(../images/cream_dust.png);
+	background-image: url('../images/cream_dust.png');
 }
+
 h1, h2, h3, h4, h5 {
 	font-family: 'Ubuntu', sans-serif;
 }
+
 h1, h2 {
 	font-weight: 700;
 }
+
 h3, h4, h5 {
-	font-weight: 700;
+	font-weight: 500;
 }
+
 h1 {
 	font-size: 4em;
 }
+
 header {
 	width: 90%;
 	margin: auto;
 	height: 100vh;
+	margin-top: 2em;
 }
 
 header h1 {
 	margin-bottom: 0;
 }
-h2.tagline { margin-top: 0; }
+
+h2.tagline { 
+	margin-top: 0; 
+}
 
 
 a { 
 	color: #00877E;
 	font-weight: bold;
-	 }
+}
 
 a:hover {
 	color: #00D4C6;
@@ -51,11 +52,13 @@ a:hover {
 @media only screen and (min-width: 768px) {
 	header {
 		width: 60%;
+		margin-top: 4em;
 	}
 }
 
 @media only screen and (min-width: 1024px) {
 	header {
 		width: 50%;
+		margin-top: 5em;
 	}
 }
