--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,19 @@ header {
 	margin: auto;
 	height: 100vh;
 	margin-top: 2em;
+	position: relative;
 }
 
 header h1 {
 	margin-bottom: 0;
+}
+.bang {
+	position: absolute;
+	top: -80px;
+	left: -80px;
+	width: 440px;
+	z-index: -1;
+	opacity: 0.1;
 }
 
 h2.tagline { 
@@ -54,11 +63,21 @@ a:hover {
 		width: 60%;
 		margin-top: 4em;
 	}
+	.bang {
+		width: 520px;
+		top: -120px;
+		left: -160px;
+	}
 }
 
 @media only screen and (min-width: 1024px) {
 	header {
 		width: 50%;
 		margin-top: 5em;
+	}
+	.bang {
+		width: 540px;
+		top: -120px;
+		left: -260px;
 	}
 }
