--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ a:hover {
 @media only screen and (min-width: 1024px) {
 	header {
 		width: 50%;
+		max-width: 700px;
 		margin-top: 5em;
 	}
 	.bang {
