--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400|Ubuntu:500,700&display=swap');
-
+* {
+	box-model: border-box;
+}
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -36,6 +37,7 @@ header {
 header h1 {
 	margin-bottom: 0;
 }
+
 .bang {
 	position: absolute;
 	top: -80px;
@@ -62,10 +64,14 @@ a:hover {
 .button {
 	color: #00877E;
 	border: 1px solid #00877E;
-	padding: 10px;
+	padding: 10px 16px;
 	text-decoration: none;
 	display: inline-block;
 	margin-top: 0;
+}
+
+.button:hover {
+	border: 1px solid #00D4C6;
 }
 
 .cta {
@@ -81,6 +87,9 @@ a:hover {
 		width: 60%;
 		margin-top: 4em;
 	}
+	h1 {
+		font-size: 6em;
+	}
 	.bang {
 		width: 520px;
 		top: -120px;
@@ -92,7 +101,7 @@ a:hover {
 	}
 	.cta h3 {
 		font-size: 1.8rem;
-		margin-bottom: 8rem;
+		margin-bottom: .8rem;
 	}	
 }
 
