added events page

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ img {
 
 .wlf {
 	display: grid;
-	grid-template-columns: 40% 60%;
+	grid-template-columns: 1fr;
 	grid-gap: 1em;
 }
 
@@ -101,10 +101,117 @@ a:hover {
 .center {
 	text-align: center;
 }
+
+/* START of Mobile Menu */
+.nav, .desktop {
+    display: block;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 900;
+}
+
+.icon {
+    position: fixed;
+    cursor: pointer;
+    top: 5%;
+    right: 0%;
+    width: 40px;
+    height: 45px;
+    transform: translate(-50%, -50%);
+    display: block;
+    z-index: 1000;
+}
+
+.hamburger {
+    width: 40px;
+    height: 4px;
+    line-height: 70px;
+    background: #666;
+    border-radius: 5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0 2px 5px rgba(0,0,0,.2);
+    transition: .5s;
+}
+
+.hamburger:before,
+.hamburger:after {
+    content: '';
+    position: absolute;
+    width: 40px;
+    height: 4px;
+    background: #666;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.2);
+    transition: .5s;
+}
+
+.hamburger:before {
+    top: -10px;
+}
+
+.hamburger:after {
+    top: 10px;
+}
+
+.icon.active .hamburger {
+    background: rgba(0,0,0,0);
+    box-shadow: 0 2px 5px rgba(0,0,0,0);
+}
+
+.icon.active .hamburger:before {
+    top: 0;
+    transform: rotate(45deg);
+}
+
+.icon.active .hamburger:after {
+    top: 0;
+    transform: rotate(135deg);
+}
+
+.menu-mobile {
+    background-color: #efefef;
+    height: 100vh;
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding-top: 150px;
+    font-family: 'Helvetica', sans-serif;
+    text-align: center;
+}
+
+.menu-mobile, .menu-mobile a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.menu-mobile a {
+    clear: right;
+    text-decoration: none;
+    color: #333;
+    height: 70px;
+    line-height: 70px;
+}
+.menu-mobile a:hover {
+    color: red;
+}
+
+.desktop, .menu-desktop, .menu-mobile {
+        display: none;
+    }
+
+
+
 @media only screen and (min-width: 768px) {
-	header, .about {
+	header, .about, .wlf {
 		width: 60%;
+		margin: auto;
 		margin-top: 4em;
+
 	}
 	h1 {
 		font-size: 6em;
@@ -121,11 +228,48 @@ a:hover {
 	.cta h3 {
 		font-size: 1.8rem;
 		margin-bottom: .8rem;
-	}	
+	}
+	.menu-desktop {
+        width: 100%;
+        display: block;
+        padding: 0;
+        line-height: 50px;
+        justify-content: space-evenly;
+        flex-direction: row;
+        height: 0;
+        text-align: right;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .menu-desktop a {
+        display: inline-flex;
+        margin-right: 30px;
+        height: 0;
+        line-height: 50px;
+        text-decoration: none;
+        color: #333;
+        justify-content: space-evenly;
+    }
+    .menu-desktop a:hover {
+        color: red;
+    }
+
+    .desktop {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        display: block;
+    }
+
+    nav.nav, .menu-mobile {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 1024px) {
-	header, .about {
+	header, .about, .wlf {
 		width: 50%;
 		max-width: 700px;
 		margin-top: 5em;
