--- a/wlf2020/css/main.css
+++ b/wlf2020/css/main.css
@@ -10,22 +10,29 @@
 
 body {
   margin: 0;
-  font-family: "Inconsolata", monospace;
+  font-family: 'Open Sans', sans-serif;
   color: #1a1a1a;
 }
 
+a {
+  text-decoration: none;
+}
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: "colfax", sans-serif;
+  font-family:'Ubuntu', sans-serif;
   text-transform: uppercase;
   margin: 0;
   font-weight: 700;
 }
 
+.logotype {
+  font-family:'Ubuntu', sans-serif;
+  font-size: 20px;
+}
 ul {
   list-style: none;
   padding: 0;
@@ -36,7 +43,7 @@ a {
   transition: color 250ms linear;
 }
 a:hover {
-  color: #f6607e;
+  color: #fd9200;
 }
 
 strong {
@@ -47,9 +54,13 @@ iframe {
   border: 0;
 }
 
+p {
+  font-size: 16px;
+  line-height: 1.4em;
+}
 .hackathon__header {
   display: flex;
-  background-color: black;
+  background-color: #2c2b2f;
   color: white;
   justify-content: center;
 }
@@ -73,6 +84,7 @@ iframe {
 }
 .hackathon__title {
   font-size: 20px;
+  margin-top: 20px;
 }
 .hackathon__subtitle {
   font-size: 80px;
@@ -81,7 +93,7 @@ iframe {
   display: flex;
   padding: 0 20px;
   border-bottom: 1px solid white;
-  background-color: black;
+  background-color: #2c2b2f;
   justify-content: center;
 }
 .hackathon__main_nav_list {
@@ -100,7 +112,7 @@ iframe {
   transition: color 250ms linear;
 }
 .hackathon__main_nav_link:hover {
-  color: #f6607e;
+  color: #fd9200;
 }
 .hackathon__main {
   display: flex;
@@ -180,7 +192,7 @@ iframe {
   flex-direction: column;
 }
 .hackathon__project_info_container:hover {
-  color: black;
+  color: #fd9200;
 }
 .hackathon__project_title {
   font-weight: 700;
@@ -224,6 +236,10 @@ iframe {
 .hackathon__participant_name {
   margin-left: 10px;
 }
+
+.hackathon__section--partners{
+  margin-bottom: 50px;
+}
 .hackathon__partners_list {
   display: flex;
   flex-wrap: wrap;
@@ -234,9 +250,12 @@ iframe {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  border: 1px solid #2c2b2f;
   padding: 10px;
   margin-top: 30px;
+}
+.hackathon__partner_item:hover {
+  border: 1px solid #fd9200;
 }
 .hackathon__partner_link {
   display: block;
@@ -244,8 +263,17 @@ iframe {
 .hackathon__partner_image {
   max-width: 100%;
 }
+
+footer a {
+ text-decoration: none;
+}
+
+footer a:hover {
+  color: #fd9200;
+}
+
 .hackathon__footer {
-  background-color: black;
+  background-color: #2c2b2f;
   color: white;
   padding: 20px;
   display: flex;
