add placeholder event image. Cap image sizes at 100% of container width

--- a/wlf2020/css/main.css
+++ b/wlf2020/css/main.css
@@ -48,6 +48,10 @@ iframe {
   border: 0;
 }
 
+img {
+  max-width: 100%;
+}
+
 .logotype {
   font-family: "Ubuntu", sans-serif;
   font-size: 20px;
