hide projects for now

--- a/wlf2020/css/main.css
+++ b/wlf2020/css/main.css
@@ -52,6 +52,10 @@ img {
   max-width: 100%;
 }
 
+#Projects {
+  display: none;
+}
+
 .logotype {
   font-family: "Ubuntu", sans-serif;
   font-size: 20px;
