--- a/wlf2020/css/main.scss
+++ b/wlf2020/css/main.scss
@@ -88,6 +88,10 @@ img {
   max-width: 100%;
 }
 
+#Projects {
+  display: none; //MH - TEMP: hide projects for now
+}
+
 .logotype {
   font-family:'Ubuntu', sans-serif;
   font-size: 20px;
