--- a/wlf2020/css/main.scss
+++ b/wlf2020/css/main.scss
@@ -104,6 +104,13 @@ img {
     background-color: $color--black;
     color: white;
     justify-content: center;
+    position: relative;
+    .logo {
+      position: absolute;
+      top: 40px;
+      left: 20px;
+      width: 80px;
+    }
 
     &--full {
       height: 500px;
