--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,16 @@ p {
   margin: auto;
 }
 
+.contributors {
+  padding: 80px 0;
+  background: #00877e;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(0, 135, 126, 0.3) 100%);
+}
+.contributors p {
+  width: 80%;
+  margin: auto;
+}
+
 header h1 {
   margin-bottom: 0;
 }
@@ -429,6 +439,10 @@ a :hover {
   .wlf-link div {
     width: 60%;
   }
+
+  .contributors p {
+    width: 60%;
+  }
 }
 @media only screen and (min-width: 1024px) {
   .bang {
@@ -445,6 +459,10 @@ a :hover {
   .about div {
     padding: 80px 0;
     width: 60%;
+  }
+
+  .contributors p {
+    width: 40%;
   }
 }
 
