ok really going to bed now

--- a/wlf2020/css/main.css
+++ b/wlf2020/css/main.css
@@ -69,6 +69,7 @@ img {
   text-decoration: none;
   display: inline-block;
   margin-top: 0;
+  margin-bottom: 16px;
 }
 .button :hover {
   border-color: #fd9200;
