--- a/css/main.scss
+++ b/css/main.scss
@@ -49,11 +49,10 @@ p {
         margin: auto;
     }
 }
-
 .contributors {
     padding: 80px 0;
     background: rgb(0,135,126);
-    background: linear-gradient(90deg, rgba(255,255,255,0.1) 0%, rgba(0,135,126,0.3) 100%);
+    background: linear-gradient(90deg, rgba(239, 230, 215, 0.4) 0%, rgba(0,135,126,0.3) 100%);
     p {
         width: 80%;
         margin: auto;
@@ -116,8 +115,6 @@ header.branding {
     p {color: #fff; font-size: 24px; line-height:32px; }
     .button { border-color: #fff; color: #fff;}
 }
-
-
 .bang {
 	position: absolute;
 	top: -80px;
@@ -131,7 +128,6 @@ h2.tagline {
 	margin-top: 1em; 
 }
 
-
 a { 
 	color: #00877E;
 	font-weight: bold;
@@ -139,7 +135,6 @@ a {
         color: #fd9200;
     }
 }
-
 
 .button {
 	color: #00877E;
@@ -153,7 +148,6 @@ a {
         border-color: #fd9200;
         color: #fd9200;
     }
-
 
 #subscribe-form {
     width: 80%;
