--- a/wlf2020/css/main.scss
+++ b/wlf2020/css/main.scss
@@ -106,6 +106,7 @@ img {
   text-decoration: none;
   display: inline-block;
   margin-top: 0;
+  margin-bottom: 16px;
   :hover {
       border-color: $color--secondary;
       color: $color--secondary;
