changed to source sans pro

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@ $color--secondary: #fd9200;
 
 body {
     margin: 0;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 16px;
 	color: #2a2a2a;
 }
