--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 16px;
   color: #2a2a2a;
 }
