--- a/css/main.scss
+++ b/css/main.scss
@@ -8,23 +8,26 @@ $color--secondary: #fd9200;
 body {
     margin: 0;
 	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 16px;
+	font-size: 18px;
 	color: #2a2a2a;
 }
 
 h1, h2, h3, h4, h5 {
-	font-family: 'Ubuntu', sans-serif;
+	font-family: 'Source Code Pro', sans-serif;
 }
 
 h1, h2 {
 	font-weight: 700;
 }
+.about h2 {font-size: 36px;}
+.wlf-link h2 { text-transform: uppercase;}
 
 h3, h4, h5 {
-	font-weight: 500;
+	font-weight: 600;
 }
 
 h1 {
+    font-family: 'Source Code Pro', sans-serif;
 	font-size: 4em;
 }
 
@@ -44,7 +47,7 @@ p {
 	position: relative;
 	padding-bottom: 40px;
     div {
-        padding: 80px 0;
+        padding: 40px 0;
         width: 90%;
         margin: auto;
     }
@@ -81,7 +84,7 @@ img {
 header.branding {
     #logo {
         width: 100px;
-        padding: 20px 0 0 20px;
+        padding: 40px 0 0 20px;
     }
 }
 
@@ -104,7 +107,7 @@ header.branding {
     padding: 4em 0;
     h2 {
         margin-bottom: 0;
-        font-size: 2.4em;
+        font-size: 2.2em;
         color: #fff;
     }
     h3 {
@@ -353,6 +356,11 @@ a {
 	h1 {
 		font-size: 6em;
 	}
+    .about {
+        h2 {font-size: 42px;}
+        div {padding: 80px 0;}
+
+    }
 	.bang {
 		width: 520px;
 		top: -120px;
