--- a/css/main.scss
+++ b/css/main.scss
@@ -71,7 +71,7 @@ main {
     margin: auto; 
 }
 
-section:nth-child(1){
+.home-page section:nth-child(1){
     background: rgb(239,230,215);
     background: radial-gradient(circle, rgba(239,230,215,0.8) 0%, rgba(239,211,170,0.2530199579831933) 58%, rgba(159,140,113,0.5) 100%);
 } 
@@ -277,7 +277,11 @@ a {
     font-size: 20px;
 }
 
-
+footer {
+    background-color: #333;
+    padding: 60px;
+    color: #fff;
+}
 
 /* Text over an images */
 
@@ -337,6 +341,28 @@ a {
 
 /* END OF Text over an images */
 
+.blog-page {
+    .grid {
+        width: 80%;
+        margin: 60px auto;
+        background-color: #fff;
+        display: grid;
+        grid-template-columns: 70% 30%;
+        grid-gap: 40px;
+        
+        aside {
+            grid-rows: 1 /-1;
+            background-color: #efe6d7;
+            padding:40px;
+        }
+    }
+    .byline { 
+        font-size: 12px;
+        margin-right: 10px;
+    }
+    .pubdate {font-size: 12px;}
+}
+
 
 
 /* MAILCHIMP STYLES */
@@ -353,6 +379,7 @@ a {
     header.branding {
         grid-template-columns: 1fr 4fr;
     }
+    #logo {font-size: 4em;}
 	h1 {
 		font-size: 6em;
 	}
