--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ main {
   margin: auto;
 }
 
-section:nth-child(1) {
+.home-page section:nth-child(1) {
   background: #efe6d7;
   background: radial-gradient(circle, rgba(239, 230, 215, 0.8) 0%, rgba(239, 211, 170, 0.253019958) 58%, rgba(159, 140, 113, 0.5) 100%);
 }
@@ -292,6 +292,12 @@ a :hover {
   font-size: 20px;
 }
 
+footer {
+  background-color: #333;
+  padding: 60px;
+  color: #fff;
+}
+
 /* Text over an images */
 .person-card p.mobile-only {
   text-align: center;
@@ -348,6 +354,27 @@ a :hover {
 }
 
 /* END OF Text over an images */
+.blog-page .grid {
+  width: 80%;
+  margin: 60px auto;
+  background-color: #fff;
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-gap: 40px;
+}
+.blog-page .grid aside {
+  grid-rows: 1/-1;
+  background-color: #efe6d7;
+  padding: 40px;
+}
+.blog-page .byline {
+  font-size: 12px;
+  margin-right: 10px;
+}
+.blog-page .pubdate {
+  font-size: 12px;
+}
+
 /* MAILCHIMP STYLES */
 #mc_embed_signup {
   background: #fff;
@@ -368,6 +395,10 @@ a :hover {
 
   header.branding {
     grid-template-columns: 1fr 4fr;
+  }
+
+  #logo {
+    font-size: 4em;
   }
 
   h1 {
