--- a/wlf2020/css/main.css
+++ b/wlf2020/css/main.css
@@ -361,6 +361,28 @@ img {
   background-color: #000;
 }
 
+/* carousel */
+ul.carousel {
+  width: 20em;
+  padding: 0;
+  margin: 50px auto 0;
+  border: 10px solid #fff;
+  box-shadow: 0px 2px 3px #eaeaea;
+}
+
+ul.carousel li {
+  background: #f7f7f7;
+  color: #ddd;
+  list-style-type: none;
+  padding: 1em;
+  margin: 0;
+  transition: background-color 0.5s;
+}
+
+ul.carousel li:nth-child(2) {
+  color: #fff;
+}
+
 @media only screen and (max-width: 667px), (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
   .location__list {
     display: block;
