--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,9 @@ p {
 
 .contributors {
   padding: 80px 0;
-  background: #00877e;
-  background: linear-gradient(90deg, rgba(239, 230, 215, 0.4) 0%, rgba(0, 135, 126, 0.3) 100%);
+  color: #fff;
+  background: #332880;
+  background: linear-gradient(90deg, rgba(37, 29, 92, 0.9) 0%, rgba(151, 138, 208, 0.8) 100%);
 }
 .contributors p {
   width: 80%;
@@ -163,6 +164,30 @@ a :hover {
 .button:hover {
   border-color: #fd9200;
   color: #fd9200;
+}
+
+.events {
+  background-image: url("../images/backgrounds/annie-spratt-0ZPSX_mQ3xI-unsplash.png");
+  background-size: cover;
+  padding: 80px;
+}
+
+.events .title {
+  grid-column: 1/-1;
+}
+
+.events .grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 80%;
+  margin: auto;
+}
+
+.events h4 {
+  border-bottom: 4px solid #666;
+  padding-bottom: 10px;
+  margin-bottom: 0;
+  display: inline-block;
 }
 
 #subscribe-form {
