--- a/wlf2020/css/main.scss
+++ b/wlf2020/css/main.scss
@@ -471,40 +471,14 @@ img {
   color: #696d74;
 }
 
-
-
 /* /NEW SLIDES */
 
-
-
-
-/* old carousel */
-
-
-ul.carousel {
-  width: 20em;
-  padding: 0;
-  margin: 50px auto 0;
-  border: 10px solid #fff;
-  box-shadow: 0px 2px 3px #eaeaea;
-
-}
-
-ul.carousel li {
-  background: #f7f7f7;
-  color: #ddd;
-  list-style-type: none;
-  padding: 1em;
-  margin: 0;
-  transition: background-color 0.5s;
-}
-
-ul.carousel li:nth-child(2) {
-  color: #fff;
-  // background: #1998c4;
-}
-
 @include mq--mobile() {
+  .slider-wrap .slider {
+    position: relative;
+    height: 580px;
+  }
+  .slider-item {width: auto;}
   .location__list {
     display: block;
     width: 80%;
@@ -517,6 +491,8 @@ ul.carousel li:nth-child(2) {
     &__header--full {
       height: 300px;
     }
+    &__section {
+      width: 90%;}
     &__subtitle {
       font-size: 30px;
     }
