--- a/wlf2020/css/main.scss
+++ b/wlf2020/css/main.scss
@@ -115,11 +115,12 @@ img {
 .maps {
   &__list {
     display: flex;
+    flex-direction: column;
   }
   &__list_item {
-    margin-left: 20px;
+    margin-top: 20px;
     &:first-child {
-      margin-left: 0;
+      margin-top: 0;
     }
   }
 }
@@ -419,10 +420,14 @@ img {
   width: 100%;
 }
 .slider-wrap .slider {
-  position: absolute;
-  width: 100%;
-  left: 0px;
-  top: 50px;
+  height: 500px;
+  position: relative;
+  margin-top: 50px;
+  overflow: hidden;
+  // position: absolute;
+  // width: 100%;
+  // left: 0px;
+  // top: 50px;
 }
 
 .slider-item {
